--- a/MSA/wwwroot/index.html
+++ b/MSA/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="MSA.styles.css" rel="stylesheet" />
-
+    <script src="js/jquery-2.2.3.min.js"></script>
 
 
 
@@ -37,6 +37,7 @@
 
     <link href="css/cssmenu/styles.css" rel="stylesheet" />
     <script src="css/cssmenu/script.js"></script>
+    <script src="js/site.js"></script>
 </head>
 
 <body>
@@ -48,6 +49,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+
 </body>
 
 </html>
